# 3dmodelingapplication

3d project/: CMakeLists.txt
3d project/shaders/: fragment_shader.glsl  vertex_shader.glsl
3d project/src/: camera.cpp  camera.h  main.cpp  model.cpp  model.h  shader.cpp  shader.h
